--- a/functions/package.json
+++ b/functions/package.json
@@ -19,23 +19,7 @@
   "devDependencies": {
     "eslint": "^5.12.0",
     "eslint-plugin-promise": "^4.0.1",
-    "firebase-functions-test": "^0.1.6",
-    "colors": "^1.0.3",
-    "del": "^0.1.3",
-    "gulp": "^3.8.10",
-    "gulp-browserify": "^0.5.0",
-    "gulp-concat": "^2.4.1",
-    "gulp-jshint": "^1.9.0",
-    "gulp-mocha": "^2.0.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-uglify": "^1.0.1",
-    "inquirer": "^0.8.0",
-    "jshint-stylish": "^1.0.0",
-    "jsonfile": "^2.0.0",
-    "mocha": "2.0.x",
-    "semver": "^4.2.0",
-    "shelljs": "^0.3.0",
-    "should": "4.3.x"
+    "firebase-functions-test": "^0.1.6"
   },
   "private": true
 }
